--- a/views/LivestreaMPD.ejs
+++ b/views/LivestreaMPD.ejs
@@ -15,17 +15,16 @@
      <h4 class="font-thin text-orange-100 text-current  bg-blue-500 w-full  px-2 ml-0 mt-0 py-1">MPEG-DASH ARB </h4>
      <div class="flex flex-col justify-start items-center px-2 border-b border-gray-600 w-full">
       <button onclick="showMenu0(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4">
-        <p style="width:160px;padding:4px 4px ;padding-left:4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl ml-0  mt-0">Dash Auto Scal </p>
-        <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
+        <p style="width:160px;padding:4px 4px ;padding-left:4px;" class="text-sm leading-5   ml-0  mt-0">Dash Auto Scal </p>
         <svg id="icon0" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
          <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-        </svg></span>
+        </svg>
       </button></div>
       <div id="menu0" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
         <form action="/scaleAuto" method="post"  class="ml-1 mt-1  flex-col bg">
           <input type="text" name="user" value="<%= user %>" hidden>
           <button   style="width: 170px;" type="submit" class="py-1 bg-gray-700 border border-gray-700 text-left  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-orange-500 text-white">
-            MPD: Auto Scale 
+            MPD: Auto Scale
            </button>
         </form>
         <div   class="ml-1 mt-1  flex-col bg">
@@ -50,11 +49,10 @@
     <h4 class="font-thin text-orange-100 text-current  bg-blue-500 w-full  px-2 ml-0 mt-0 py-1">Dash Profile Main</h4>
       <div class="flex flex-col justify-start items-center px-2 border-b border-gray-600 w-full  ">
         <button onclick="showMenu1(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
-          <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Simple  </p>
-          <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
- <svg id="icon1" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5">Dash Profile Simple  </p>
+          <svg id="icon1" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-          </svg></span>
+          </svg>
         </button>
         <div id="menu1" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
           <div   class="ml-0 mt-1  flex-col bg">
@@ -80,11 +78,10 @@
         <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
     
         <button onclick="showMenu2(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
-            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Full  </p>
-            <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
- <svg id="icon2" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 ">Dash Profile Full  </p>
+            <svg id="icon2" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg></span>
+            </svg>
           </button>
         <div id="menu2" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
           <div   class="ml-0 mt-1  flex-col bg">
@@ -111,11 +108,10 @@
       <h4 class="font-thin text-orange-100 text-current  bg-blue-500  w-full px-2 ml-0 mt-0 mb-0 py-1">Codec Profile Main10</h4>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
         <button onclick="showMenu3(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
-            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile live  </p>
-            <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
- <svg id="icon3" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 ">Dash Profile live  </p>
+          <svg id="icon3" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg></span>
+            </svg>
           </button>
         <div id="menu3" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
           <div   class="ml-0 mt-1  flex-col bg">
@@ -140,11 +136,10 @@
       </div>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
         <button onclick="showMenu4(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
-            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Simple  </p>
-            <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
- <svg id="icon4" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 ">Dash Profile Simple  </p>
+            <svg id="icon4" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg></span>
+            </svg>
           </button>
         <div id="menu4" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
           <div   class="ml-0 mt-1  flex-col bg">
@@ -169,11 +164,10 @@
       </div>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
         <button onclick="showMenu5(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
-            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Full  </p>
-            <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
- <svg id="icon5" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 ">Dash Profile Full  </p>
+            <svg id="icon5" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg></span>
+            </svg>
           </button>
         <div id="menu5" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
           <div   class="ml-0 mt-1  flex-col bg">
@@ -199,11 +193,10 @@
       <h4 class="font-thin text-orange-100 text-current  bg-blue-500 w-full px-2 ml-0 mt-0 mb-0 py-1">Codec Profile Main12</h4>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
         <button onclick="showMenu6(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
-            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile live  </p>
-            <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
- <svg id="icon6" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 ">Dash Profile live  </p>
+            <svg id="icon6" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg></span>
+            </svg>
           </button>
         <div id="menu6" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
           <div   class="ml-0 mt-1  flex-col bg">
@@ -228,11 +221,10 @@
       </div>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
         <button onclick="showMenu7(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
-            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Simple  </p>
-            <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
- <svg id="icon7" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 ">Dash Profile Simple  </p>
+            <svg id="icon7" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg></span>
+            </svg>
           </button>
         <div id="menu7" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
           <div   class="ml-0 mt-1  flex-col bg">
@@ -257,11 +249,10 @@
       </div>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
         <button onclick="showMenu8(true)" class="focus:outline-none focus:text-indigo-200 text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
-            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Full  </p>
-            <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
- <svg id="icon8" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 ">Dash Profile Full  </p>
+            <svg id="icon8" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg></span>
+            </svg>
           </button>
         <div id="menu8" class="flex justify-start  flex-col w-full md:w-auto items-start pb-1 ">
           <div   class="ml-0 mt-1  flex-col bg">
@@ -284,12 +275,11 @@
           </div>
         </div>
     </div>
-       <button onclick="showMenu9(true)" class="focus:outline-none bg-green-500   text-left  text-white flex justify-between items-center w-full py-1 space-x-1 px-2">
+       <button onclick="showMenu9(true)" class="focus:outline-none bg-blue-500   text-left  text-white flex justify-between items-center w-full py-1 space-x-1 px-2">
         <p class="text-sm leading-5">Video Decompresed </p>
-        <span class="border border-green-600 rounded-full bg-green-600 p-1">
- <svg id="icon9" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg id="icon9" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-        </svg></span>
+        </svg>
       </button>
 
         <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
@@ -327,7 +317,7 @@
   </aside>
   <div  class="flex-grow text-gray-800">
     <header class="flex items-center h-20 px-6 sm:px-10 bg-white">
-      <h1 id="textitle"  ondblclick="clears();"  class="text-gray-700 font-extralight justify-start text-2xl items-start  animate-pulse" >Université Badji Mokhtar-Annaba Departement Electronique </h1>
+      <h3 id="textitle"  ondblclick="clears();"  class="text-gray-700 font-extralight justify-start text-xl items-start  animate-pulse" >Université Badji Mokhtar-Annaba Departement Electronique </h3>
       <button class="block sm:hidden relative flex-shrink-0 p-2 mr-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 focus:bg-gray-100 focus:text-gray-800 rounded-full">
         <span class="sr-only">Menu</span>
           <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
