--- a/views/SelecteStream.ejs
+++ b/views/SelecteStream.ejs
@@ -20,7 +20,7 @@
   </aside>
   <div class="flex-grow text-gray-800">
     <header class="flex items-center h-20 px-6 sm:px-10 bg-white">
-      <h1  class="text-gray-700 font-extralight justify-start text-2xl items-start  animate-pulse" >Université Badji Mokhtar-Annaba Departement Electronique </h1>
+      <h3  class="text-gray-700 font-extralight justify-start text-xl items-start  animate-pulse" >Université Badji Mokhtar-Annaba Departement Electronique </h3>
        <button class="block sm:hidden relative flex-shrink-0 p-2 mr-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 focus:bg-gray-100 focus:text-gray-800 rounded-full">
         <span class="sr-only">Menu</span>
           <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
