--- a/views/scalMPD/MP4/MP4600P.ejs
+++ b/views/scalMPD/MP4/MP4600P.ejs
@@ -428,7 +428,7 @@
     document.getElementById("textitle").innerHTML=`<span class="text-orange-500">Url:</span><span >${link2}</span>`
     }
    function clears(){
-    document.getElementById("textitle").innerHTML=``
+    document.getElementById("textitle").innerHTML=`Université Badji Mokhtar-Annaba Departement Electronique`
    }
 let icon0 = document.getElementById("icon0");
 let menu0= document.getElementById("menu0");
